<resources>
    <string name="app_name">bitcoin nova Miner</string>
    <string name="mining_pool_address">Mining Pool Address</string>
    <string name="username">Address bitcoin nova</string>
    <string name="cmdline">Cmdline</string>
    <string name="start">Start</string>
    <string name="help">Help</string>
    <string name="cmd">Cmd</string>
    <string name="stop">Stop</string>
    <string name="threads">Threads</string>
    <string name="max_cpu_usage">Max CPU usage</string>
    <string name="percent">%</string>
    <string name="hpers">H/s</string>
    <string name="accepted">accepted</string>
    <string name="cpus">Cores</string>
    <string name="use_worker_id">add worker id</string>
    <string name="textPools">Select Mining Pool</string>

</resources>
